abstractinterp: remove DBS/Interval/Predicate mains
Use the picocli interface for integration tests instead of the various
"extra" main methods.

Signed-off-by: Kenny Ballou <kb@devnulllabs.io>